# oxibrowser

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: AppIcon.icns  Info-iOS.plist  Info.plist  oxibrowser.entitlements
assets/AppIcon.xcassets/AppIcon.appiconset/: Contents.json
scripts/: build_ios.sh  bundle_macos.sh  generate_icons.py
src/: browser.rs  css.rs  dom.rs  html.rs  icons.rs  js.rs  layout.rs  lib.rs  main.rs  net.rs  render.rs  style.rs  types.rs  ui.rs  url_bar.rs
src/platform/: ios.rs  macos.rs  mod.rs
