[package]
name = "oxibrowser"
version = "0.1.0"
edition = "2021"
description = "Rust shell ve native WebView motoru ile Chrome-benzeri web tarayıcısı - OxiBrowser"
default-run = "oxibrowser"

[lib]
name = "oxibrowser_lib"
path = "src/lib.rs"

[[bin]]
name = "oxibrowser"
path = "src/main.rs"
required-features = ["desktop"]

[dependencies]
# Window & UI
winit = "0.30"
softbuffer = "0.4"
wry = { version = "0.55", features = ["devtools"] }

# 2D Rendering
tiny-skia = "0.11"

# HTML/CSS - kendi parser'ımız, html5ever kullanmıyoruz
# cssparser sadece CSS renk ayrıştırma için referans
cssparser = "0.33"
raw-window-handle = "0.6"

# HTTP networking
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
url = "2.5"

# Persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

# JavaScript - devre dışı (boa_engine uyumluluk sorunu)
# boa_engine = "0.18"

# Text & Fonts
ab_glyph = "0.2"
fontdb = "0.16"

# Image
image = "0.25"

# Text layout
unicode-linebreak = "0.1"

# Logging
log = "0.4"
env_logger = "0.11"

# Apple platform dependencies
[target.'cfg(target_vendor = "apple")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["std"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["std", "NSMenu", "NSMenuItem", "NSApplication", "NSImage", "NSStatusBar", "NSEvent"] }

[features]
default = ["desktop"]
desktop = []
ios-app = []

[profile.release]
opt-level = 2
lto = true
